# dongfengpo

./: .cspell.json  .env.example  .gitignore  PROJECT_COMPLETION_CERTIFICATE.txt  README.md  TradingView_支撑压力指标_信号优化版.pine  TradingView_支撑压力指标_高精度版.pine  WORK_SUMMARY.txt  auto_update_data.sh  backfill_minute.sh  check_system_health.py  clear_cache.html  debug_frontend_minute.html  debug_frontend_timeshare.html  debug_minute_chart.html  debug_minute_data.py  debug_redis_streams.py  debug_sector.json  debug_tencent_kline.py  debug_timeshare.html  demo_complete_system.py  docker-compose.yml  dump.rdb  frontend_websocket_demo.html  implementation_plan.md  implementation_plan.md.resolved.22  input_debug_tool.html  interface_comparison_test.html  intraday_strategy_visual.html  monitoring_dashboard.py  monitoring_results_20251001_215943.json  pyproject.toml  restart_backfill.sh  restart_backfill_fast.sh  simple_backend.py  start_system.sh  test_ak.py  test_akshare.py  test_connect.py  test_sector.py  (+14 more)
.bmad/: 可用任务列表
.claude/: settings.local.json
.git.backup.20251215_085701/: COMMIT_EDITMSG  index
.github/: PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
backups/: versions.json
config/: main.json  (+3 more)
libs/data_contracts/: README.md  pyproject.toml
libs/data_contracts/data_contracts/: __init__.py  features.py  risk.py  signals.py  ticks.py
libs/data_contracts/schemas/v1.0/: CleanedTick.schema.json  FeatureSnapshot.schema.json  MessageEnvelope.schema.json  OpportunitySignal.schema.json  RiskAlert.schema.json  StrategySignal.schema.json  TickRecord.schema.json  index.json
(+673 files in other folders)
