[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dfp-data-contracts"
version = "0.1.0"
description = "Shared data contracts for the intraday processing pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
